--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-loader": "^16.0.0-beta.9"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.4.0",
+        "element-plus": "^1.0.2-beta.35",
         "vue": "^3.0.7"
     }
 }
